--- a/src/components/Ausstellung2023components/Qvarterimagesection/qvarterimagesection.scss
+++ b/src/components/Ausstellung2023components/Qvarterimagesection/qvarterimagesection.scss
@@ -35,6 +35,7 @@
       flex: 2 2;
       width: 100%;
       height: 100%;
+      margin: 0 1px 0 0;
 
       .qvarter-image-side2-alignment {
         display: flex;
