--- a/src/components/Ausstellung2023components/Theappearlsection/theappearlsection.scss
+++ b/src/components/Ausstellung2023components/Theappearlsection/theappearlsection.scss
@@ -44,8 +44,9 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content:center;
     align-items: start;
+    gap: 150px;
 
     .collaborations-flx-items1 {
       h2 {
