--- a/src/components/Lwandlecomponents/Tomvonsection/tomvon.scss
+++ b/src/components/Lwandlecomponents/Tomvonsection/tomvon.scss
@@ -15,7 +15,7 @@
       justify-content: space-between;
       align-items: center;
       gap: 700px;
-      animation: scrollRight 30s linear infinite;
+      animation: scrollRight 30s linear infinite alternate;
     }
 
     .scroll-left {
@@ -23,7 +23,7 @@
       justify-content: space-between;
       align-items: center;
       gap: 700px;
-      animation: scrollLeft 30s linear infinite;
+      animation: scrollLeft 30s linear infinite alternate;
     }
 
     @keyframes scrollRight {
